ui(ManageFeedPage): fix sub error font color for dark mode

--- a/src/components/ManageFeedPage/SubscriptionForm/styles.css
+++ b/src/components/ManageFeedPage/SubscriptionForm/styles.css
@@ -36,6 +36,10 @@
   padding: 0.5rem;
 }
 
+.dark-theme .manage-feeds-section .error-card p {
+  color: var(--dark-blue);
+}
+
 .unstyled-button {
   border: none;
   padding: 0;
